complete about, contact, shop

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@
   --font-secondary : Open Sans;
   --text-primary : 20px;
   --text-secondary : 16px;
-  /* --translate-z-10 : translateZ(10px); */
+  --color-section: #FAEDEB;
 }
